--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Introducing self
 <p>First, let me introduce my self. My name is Fidelia Intan Roslinda, you can call me Intan. I was born in Jakarta, 4 November 2003. I live in Bogor with my parents. I'm the only child in my family. My hobies are singing, drawing, and painting. Right now, I go to Bogor Vocational High School of Chemical Analyst. And This is me </p>
 <center><img src="Fotooo.jpg" width="500 px"></center>
 <p>Beside that picture, i also have a picture with my bias like this picture </p>
-<center><img scr="haaloo.jpg" width="500 px"></center>
+<center><img scr="haloo.jpg" width="500 px"></center>
 <p>If you want to know me closely, you can contact me on my instagram @fideliaaintan. Thankyouu 🥰</p>
 <blockquote></blockquote>
 <right><h5><strong>Lots of Love,<em>Intan</em></strong></h5></right>
