--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@ Introducing self
 <p>First, let me introduce my self. My name is Fidelia Intan Roslinda, you can call me Intan. I was born in Jakarta, 4 November 2003. I live in Bogor with my parents. I'm the only child in my family. My hobies are singing, drawing, and painting. Right now, I go to Bogor Vocational High School of Chemical Analyst. And This is me </p>
 <center><img src="Fotooo.jpg" width="500 px"></center>
 <p>Beside that picture, i also have a picture with my bias like this picture </p>
-<center><img scr="haloo.jpg" width="500 px"></center>
-<p>If you want to know me closely, you can contact me on my instagram @fideliaaintan. Thankyouu 🥰</p>
+<center><img src="haloo.jpg" width="500 px"></center>
+<p>Haters will say that picture must be an edits. /please forgive my hallucination/. So, that's all about me if you want to know me more, you can contact me on my instagram 🍑@fideliaaintan🍑. Thankyou for your attention, Have a nice day🥰</p>
 <blockquote></blockquote>
-<right><h5><strong>Lots of Love,<em>Intan</em></strong></h5></right>
+<right><h5><strong>Regards,<em>Hwang Hyunjin's future</em></strong></h5></right>
 </body>
 </html>
  
