--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ Introducing self
 <p>Haters will say that picture must be an edits. /please forgive my hallucination/. So, that's all about me if you want to know me more, you can contact me on my instagram 🍑@fideliaaintan🍑. Thankyou for your attention, Have a nice day🥰</p>
 <blockquote></blockquote>
 <right><h5><strong>Regards,<em>Hwang Hyunjin's future</em></strong></h5></right>
+<link rel="stylesheet"href="index.css"/>
 </body>
 </html>
  
