--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>
 Introducing self
 </title>
-</head>
+<link rel="stylesheet"href="index.css"/></head>
 <body>
 <body background = "Background3.jpg">
 <h1>
